# bmplib

./: CMakeLists.txt  README.md  bmp.cpp  bmp.h  bmp_exceptions.h  build.sh  main.cpp
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  bmp.cpp  bmp.h  bmp_exceptions.h
